Add verification tools and enhance chat functionality; introduce ChatEntry and ChatConversationFormatter classes, update ToolGroup for verification, and improve SHAP curve processing with request seed handling